# fedmecvae

./: .gitignore  main.py  pyproject.toml
lightning_logs_synthetic/cVAE (Flex)/version_0/: cVAE (Flex)-epoch=122-Validation-loss=0.00.ckpt  events.out.tfevents.1688416288.paak.56589.0  hparams.yaml
lightning_logs_synthetic/cVAE (Flex)/version_1/: cVAE (Flex)-epoch=145-Validation-loss=0.00.ckpt  events.out.tfevents.1688416408.paak.56661.0  hparams.yaml
lightning_logs_synthetic/cVAE (Flex)/version_2/: cVAE (Flex)-epoch=97-Validation-loss=0.00.ckpt  events.out.tfevents.1688416528.paak.56717.0
lightning_logs_synthetic/cVAE (Flex)/version_3/: cVAE (Flex)-epoch=125-Validation-loss=0.00.ckpt  events.out.tfevents.1688420508.paak.58555.0
lightning_logs_synthetic/cVAE (Flex)/version_4/: cVAE (Flex)-epoch=39-Validation-loss=0.00.ckpt  events.out.tfevents.1688420724.paak.58555.1  hparams.yaml
lightning_logs_synthetic/cVAE (Flex)/version_5/: cVAE (Flex)-epoch=118-Validation-loss=0.00.ckpt  events.out.tfevents.1688420930.paak.58725.0
mecvae/: data.py  federated.py  lit.py  mnist.py  model.py
mecvae/lit_models/: cvae.py
notebooks/: age-prediction-benchmark.ipynb  mnist_with_batch_effects.ipynb  optuna.db  real-brain-data-test.ipynb  synthetic-data-test.ipynb  test-cvae.ipynb  test.ipynb  test_fedavg.ipynb
notebooks/tensorboard_logs/MECVAE/version_0/: events.out.tfevents.1683206333.paak.12234.0
notebooks/tensorboard_logs/MECVAE/version_1/: events.out.tfevents.1683206489.paak.12234.1
